fixed user alignments

--- a/app/assets/stylesheets/scss/index.sass
+++ b/app/assets/stylesheets/scss/index.sass
@@ -26,13 +26,18 @@
 
 .sent-info
   float: right
+  width: 180px
   img.photo
     border: 5px solid #eee
     display: block
     float: left
     margin-right: 5px
+    margin-left: 15px
   .user
+    text-align: left
     margin-bottom: 5px
+    margin-left: 15px
+    font-size: 14px
   .thumbs
     font-size: 12px
     color: #090
